[OPENMEETINGS-2722] CLI admin detects deleted recordings